cabal-version: 3.0

name:                   bcc-testnet
version:                1.99.0
description:            The bcc full node
author:                 TBCO
maintainer:             operations@blockchain-company.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15   }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
      build-depends:    unix

library
  import:               base, project-config
                      , maybe-unix

  build-depends:        aeson
                      , base16-bytestring
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , http-client
                      , http-types
                      , process
                      , random
                      , resourcet
                      , text
                      , time
                      , unordered-containers
                      , yaml

  hs-source-dirs:       src
  exposed-modules:      Test.Base
                        Test.Process
                        Testnet.Cole
                        Testnet.Bcc
                        Testnet.Conf
                        Testnet.List
                        Testnet.Sophie
                        Testnet.SubmitApi

executable bcc-testnet
  import:               base, project-config

  hs-source-dirs:       testnet

  main-is:              Main.hs

  build-depends:        ansi-terminal
                      , bcc-config
                      , bcc-testnet
                      , hedgehog
                      , hedgehog-extras
                      , optparse-applicative-fork
                      , resourcet
                      , stm
                      , text

  other-modules:        Paths_bcc_testnet
                        Testnet.Commands
                        Testnet.Commands.Cole
                        Testnet.Commands.Bcc
                        Testnet.Commands.Sophie
                        Testnet.Commands.Version
                        Testnet.Run

  autogen-modules:      Paths_bcc_testnet

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

test-suite bcc-testnet-tests
  import:               base, project-config

  hs-source-dirs:       test

  main-is:              Main.hs

  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , bcc-testnet
                      , directory
                      , hedgehog
                      , hedgehog-extras
                      , filepath
                      , tasty
                      , tasty-hedgehog
                      , text
                      , unordered-containers

  other-modules:        Spec.Zerepoch.Direct.TxInLockingZerepoch
                        Spec.Zerepoch.Script.TxInLockingZerepoch
                        Spec.Zerepoch.SubmitApi.TxInLockingZerepoch

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-tool-depends:   bcc-node:bcc-node
                      , bcc-cli:bcc-cli
