cabal-version: 3.0

name:                  bcc-topology
version:               1.99.0
description:           A bcc topology generator
author:                TBCO
maintainer:            operations@blockchain-company.io
license:               Apache-2.0
license-files:         LICENSE
                       NOTICE
build-type:            Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15   }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints

executable bcc-topology
  import:               base, project-config
  hs-source-dirs:       .
  main-is:              bcc-topology.hs
  ghc-options:          -threaded
                        -rtsopts
                        "-with-rtsopts=-T"
  build-depends:        aeson
                      , bytestring
                      , containers
                      , graphviz
                      , optparse-applicative-fork
                      , split
                      , text
