cabal-version: 2.4

name:                  locli
version:               1.29
description:           Bcc log analysis CLI.
author:                TBCO (Blockchain Engineer Robert Mourey Jr for The-Blockchain-Company)
maintainer:            operations@blockchain-company.io
license:               Apache-2.0
license-files:
  NOTICE
build-type:            Simple

library

  hs-source-dirs:      src

  exposed-modules:     Data.Accum
                       Data.Distribution

                       Bcc.Analysis.Profile
                       Bcc.Analysis.TopHandler

                       Bcc.Analysis.API
                       Bcc.Analysis.BlockProp
                       Bcc.Analysis.Driver
                       Bcc.Analysis.MachTimeline

                       Bcc.Unlog.Commands
                       Bcc.Unlog.LogObject
                       Bcc.Unlog.Parsers
                       Bcc.Unlog.Render
                       Bcc.Unlog.Resources
                       Bcc.Unlog.Run
                       Bcc.Unlog.SlotStats

  other-modules:       Paths_locli

  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , async
                     , attoparsec
                     , attoparsec-iso8601
                     , bytestring
                     , bcc-config
                     , bcc-prelude
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , file-embed
                     , gnuplot
                     , Histogram
                     , tbco-monitoring
                     , optparse-applicative-fork
                     , optparse-generic
                     , shardagnostic-network
                     , process
                     , quiet
                     , scientific
                     , split
                     , statistics
                     , template-haskell
                     , text
                     , text-short
                     , time
                     , transformers
                     , transformers-except
                     , unordered-containers
                     , utf8-string
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       TupleSections

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat
                       -Wno-all-missed-specialisations

executable locli
  hs-source-dirs:      app
  main-is:             locli.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T -N4 -A8m"
  build-depends:       base
                     , bcc-prelude
                     , locli
                     , optparse-applicative-fork
                     , text
                     , text-short
                     , transformers
                     , transformers-except
  default-extensions:  NoImplicitPrelude
