cabal-version: 3.0

name:                   zerepoch-example
version:                1.29.0
description:            End to end examples of creating and executing Zerepoch scripts.
author:                 TBCO
maintainer:             operations@blockchain-company.io
license:                Apache-2.0
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

Flag buildable
  Description:   Whether this package is buildable
  Default:       True

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -fobject-code
                        -fno-ignore-interface-pragmas
                        -fno-omit-interface-pragmas

  if !flag(buildable)
    buildable:          False

common maybe-Win32
  if os(windows)
     build-depends:     Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Bcc.ZerepochExample.AlwaysFails
                        Bcc.ZerepochExample.AlwaysSucceeds
                        Bcc.ZerepochExample.CustomDatumRedeemerGuess
                        Bcc.ZerepochExample.DatumRedeemerGuess
                        Bcc.ZerepochExample.MintingScript
                        Bcc.ZerepochExample.ScriptContextChecker
                        Bcc.ZerepochExample.Sum

  build-depends:        aeson
                      , bytestring
                      , bcc-api
                      , bcc-cli
                      , bcc-ledger-aurum
                      , bcc-ledger-core
                      , bcc-protocol-toptimum
                      , bcc-slotting
                      , containers
                      , filepath
                      , shardagnostic-consensus
                      , shardagnostic-network
                      , zerepoch-ledger
                      , zerepoch-ledger-api
                      , zerepoch-tx
                      , zerepoch-tx-plugin
                      , serialise
                      , sophie-spec-ledger
                      , strict-containers
                      , transformers
                      , transformers-except


executable zerepoch-example
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              zerepoch-example.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        bcc-api
                      , directory
                      , filepath
                      , zerepoch-example


executable create-script-context
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              create-script-context.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        bytestring
                      , bcc-api
                      , optparse-applicative
                      , zerepoch-example
                      , transformers

test-suite zerepoch-example-test
  import:               base, project-config

  hs-source-dirs:       test
  main-is:              zerepoch-example-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        bcc-prelude
                      , aeson
                      , bcc-api
                      , bcc-api:gen
                      , bcc-ledger-aurum
                      , bcc-ledger-core
                      , containers
                      , hedgehog
                      , zerepoch-example
                      , zerepoch-ledger
                      , zerepoch-ledger-api
                      , sophie-spec-ledger


  other-modules:        Test.ZerepochExample.Gen
                        Test.ZerepochExample.Zerepoch
                        Test.ZerepochExample.ScriptData

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

